<resources>
    <string name="app_name" translatable="false">ItsStudyTime</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="exam">Exam Name</string>
    <string name="date">Date:</string>
    <string name="exam_name">Enter your exam name:</string>
    <string name="positive_button" translatable="false">Ok</string>
    <string name="negative_button">Cancel</string>
    <string name="exam_snackbar">Exam successfully set on</string>
    <string name="good_luck">Good Luck!</string>
    <string name="exam_details">Set Details</string>
    <string name="grade">Grade:</string>
    <string name="study_time">Study time (hours):</string>
    <string name="empty_string">You must give a name to your exam. Retry!</string>
    <string name="completed_exam">Completed</string>
    <string name="title_activity_settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="lets_study">Let\'s study!</string>
    <string name="set_grade">Congratulations! What grade did you get?</string>
    <string name="empty_grade">You must give a valid grade. Retry!</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="lode">Cum Laude</string>
    <string name="duplicate">Can\'t add a new exam with a duplicate name!</string>
    <string name="exam_mail">My Exam</string>
    <string name="aboutus">
        Concentration is key for getting good results in studying, just as much as being able to plan correctly every study session. However, concentration needs a rest every once in a while, especially for people who tend to get easily distracted.\n\n
        DeskTime has come up with a theory for productivity based on a 52:17 work / rest ratio which shows how the most productive people in the world thrive daily. This app applies this theory to study sessions, as one hour of uninterrupted dedication is rewarded with a 20 minute break.
        ItsStudyTime works also as an exam planner with unique features that allow to store, check and share exam data.\n\n
        Be productive without overworking yourself. Prepare your next exam with ItsStudyTime!
     </string>
    <string name="theme">Select a theme</string>
    <string name="aspect">Aspect</string>
    <string name="data">Data</string>
    <string name="erase">Erase Exams</string>
    <string name="dark">Dark</string>
    <string name="def">Default</string>
    <string name="white">White</string>
    <string name="confirm">Are you sure about erasing your exams?</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_message">Add your next exams to the list and start preparing them with ItsStudyTime</string>
    <string name="show_message">Don\'t show this message anymore</string>
    <string name="retake">Get back into studying with ItsStudyTime!</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>